--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
   "devDependencies": {
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-import-export": "^1.0.2"
+  },
+  "dependencies": {
+    "lodash": "^4.17.21"
   }
 }
