change paradigm and enable two way communication

--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,5 @@
 {
-	"presets": [
-		   "import-export"
-	],
-	"plugins": [
-		   "transform-object-rest-spread"
-	]
+    "presets": [
+        "@babel/preset-env"
+    ]
 }
