--- a/package.json
+++ b/package.json
@@ -7,9 +7,23 @@
   "private": true,
   "devDependencies": {
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-import-export": "^1.0.2"
+    "babel-preset-import-export": "^1.0.2",
+    "@babel/cli": "^7.10.5",
+    "@babel/core": "^7.10.5",
+    "@babel/node": "^7.10.5",
+    "@babel/polyfill": "^7.10.4",
+    "@babel/preset-env": "^7.10.4",
+    "@babel/register": "^7.10.5",
+    "@babel/runtime": "^7.10.5",
+    "chai": "^4.2.0",
+    "mocha": "^10.2.0"
   },
   "dependencies": {
     "lodash": "^4.17.21"
+  },
+  "scripts": {
+    "start": "nodemon --exec babel-node src/index.js",
+    "test": "nodemon --exec mocha ./_test_/test.spec.js",
+    "build": "babel ./src/ -d cjs/"
   }
 }
