--- a/package.json
+++ b/package.json
@@ -2,12 +2,10 @@
   "name": "unixevents",
   "version": "1.0.0",
   "main": "index.js",
-  "author": "Rohit Singh",
+  "author": "Rohit Singh <rohsins@gmail.com>",
   "license": "MIT",
   "private": true,
   "devDependencies": {
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-import-export": "^1.0.2",
     "@babel/cli": "^7.10.5",
     "@babel/core": "^7.10.5",
     "@babel/node": "^7.10.5",
@@ -15,15 +13,22 @@
     "@babel/preset-env": "^7.10.4",
     "@babel/register": "^7.10.5",
     "@babel/runtime": "^7.10.5",
-    "chai": "^4.2.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-import-export": "^1.0.2",
     "mocha": "^10.2.0"
   },
   "dependencies": {
     "lodash": "^4.17.21"
   },
   "scripts": {
-    "start": "nodemon --exec babel-node src/index.js",
     "test": "mocha --exit ./_test_/test.spec.js",
     "build": "babel ./src/ -d cjs/"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/rohsins/unixevents.git"
+  },
+  "bugs": {
+    "url": "https://github.com/rohsins/unixevents/issues"
   }
 }
