--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
   "license": "MIT",
   "private": false,
   "devDependencies": {
-    "@types/mocha": "^10.0.1",
-    "@types/node": "^20.3.3",
-    "mocha": "^10.2.0",
-    "ts-node": "^10.9.1"
+    "@types/mocha": "^10.0.10",
+    "@types/node": "^20.19.10",
+    "mocha": "^10.8.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.2"
   },
   "scripts": {
     "test": "mocha --exit ./_test_/test.spec.ts",
